--- a/angular.json
+++ b/angular.json
@@ -104,7 +104,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/airplane.ico",
               "src/assets"
             ],
             "styles": [
